@@ -1,3 +1,0 @@
-DIST ipyparallel-4.0.0.tar.gz 2270657 SHA256 cf4aae8d5c84becbe5bbda7791017f242efc2e017e9a9d54ac1ee4d73c707618 SHA512 6f2672b1f65a4487e619745c78a88621aa15b2cb08995dfb81584c9c05e96441b6b55e990edd495c6b26d939f9c237efd876e2ff65c1d9ba29fa62559ac9b1e7 WHIRLPOOL 41402dbfc4c1d57ba32433ff15d88d12a1df30c0891aa85d249cc119a8bba4b39415bc1e32215c63d982c18a5d6e6badbcd95654311d254aa3ab5d1b2198a962
-DIST ipyparallel-4.0.2.tar.gz 2270476 SHA256 6b9e09ca441a45e055b97cb8e3e1dd30de85b935fae3aa0d97f138352fd3089b SHA512 a2edd8d821a6a902fc07e3f883f9dec99d3b51681e968c81163ae1ef5cf1c0ae9fc564cc0378e10b06da9cb822b58dab6bdba65ce441ce77908bdf3d0c500b16 WHIRLPOOL c7020d40cc708d9e9bc0b741c96cb5c79487ec881fc473bdc4eabd77051821a4ed377c2c24dc8a9e5255de2f4d70bd17f7ea62c5f9aff39340da17620be4741f
-DIST ipyparallel-4.1.0.tar.gz 2271608 SHA256 c943f6b3bbabb9332336d15474969e2a7a73d5b583f9786f7b357c75e4b1709a SHA512 19fff1ea57d9fcaec6525ce6e0c72ab63ab1245e32e485174a0691d2b48d8d2512af4055b77df82c7b30a8c071e1b6c5900d37e992f82f1597492e220e83d36f WHIRLPOOL ead35bc2166af0b221e730550689b09b7bf04148abcd754039f1c511acaa182ba50b593372f3e8bc627ae40a6117f9209cac476c1905bdc780f53de10666ffe1
